# swex-camp-spellcaster

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  __init__.py  main.py  playground.py  pyproject.toml  requirements.in  requirements.txt  setup.py  test.py  training_stats.txt
.cursor/rules/: CLAUDE.mdc  bot_development.mdc  bot_strategies.mdc  game_structure.mdc  markdown.mdc  python.mdc
.github/workflows/: ci.yml
.vibedev/specs/spellcasters-playground-backend/: design.md  requirements.md  tasks.md
backend/: README.md  playground.db
backend/app/: main.py
backend/app/api/: actions.py  admin.py  lobby.py  players.py  replay.py  sessions.py  streaming.py
backend/app/core/: config.py  database.py  error_handlers.py  exceptions.py  state.py
backend/app/models/: actions.py  bots.py  database.py  errors.py  events.py  lobby.py  players.py  results.py  sessions.py
backend/app/services/: admin_service.py  builtin_bots.py  database.py  game_adapter.py  lobby_service.py  match_logger.py  player_registry.py  runtime.py  session_manager.py  sse_manager.py  turn_processor.py  visualizer_adapter.py  visualizer_service.py
backend/client/: bot_client.py  bot_client_main.py  sse_client.py  sse_client_main.py
backend/tests/: conftest.py  test_admin_api.py  test_bot_system.py  test_lobby_api.py  test_lobby_service.py  test_models.py  test_player_management.py  test_remote_player_timeout.py  test_replay.py  test_session_management.py  test_session_manager_visualizer.py  test_sessions_api.py  test_streaming.py  test_system_integration.py  test_turn_processor.py  test_visualizer_adapter.py  test_visualizer_integration.py  test_visualizer_service.py
backend/tests/e2e/: test_real_clients.py
bots/: bot_interface.py  sample_bot.py
bots/ai_bot/: README.md  __init__.py  ai_bot.py  ai_bot_model.pth  azure_setup.py  azure_setup.sh  azure_train.py  requirements.txt  stats.txt  train.py
bots/ai_bot/models/: ai_bot_episode_10.pth  ai_bot_episode_100.pth  ai_bot_episode_150.pth  ai_bot_episode_20.pth  ai_bot_episode_200.pth  ai_bot_episode_250.pth  ai_bot_episode_30.pth  ai_bot_episode_300.pth  ai_bot_episode_350.pth  ai_bot_episode_40.pth  ai_bot_episode_400.pth  ai_bot_episode_450.pth  ai_bot_episode_50.pth  ai_bot_episode_500.pth  ai_bot_episode_550.pth  ai_bot_episode_60.pth  ai_bot_episode_600.pth  ai_bot_episode_650.pth  ai_bot_episode_70.pth  (+4 more)
bots/bant-bot/: bant-bot.py
bots/botina/: botina.py
bots/kevin_link/: __init__.py  kevin_link.py  strategy.md
bots/pevu_bot/: pevu_bot.py
bots/rade/: __init__.py  rade.py
bots/red_wizard_bot/: __init__.py  red_wizard_bot.py
bots/rincewind_bot/: __init__.py  rincewind_bot.py
bots/sample_bot/: sample_bot.py  sample_bot_1.py  sample_bot_2.py
bots/sample_bot1/: sample_bot_1.py
bots/sample_bot2/: sample_bot_2.py
bots/sample_bot3/: sample_bot_3.py
bots/tactical_bot/: README.md  tactical_bot.py
bots/vezr/: __init__.py  openai_integration.py  vezr_bot.py
bots/vezr_byron/: vezr_byron.py
client/: README.md  __init__.py  bot_client.py  bot_client_main.py  sse_client.py  sse_client_main.py
client/tests/: conftest.py  test_client_initialization.py  test_database_isolation.py  test_gameplay_loop.py
doc/: backend-build-blueprint.md  backend-spec.md  backend-todo.md  overall-spec.md  product-specificaiton.md
docs/specs/: spellcasters-backend-spec_final.md  spellcasters-backend-spec_v2.md  spellcasters-functional-spec.md
docs/spellcasters-backend/: spellcasters-backend-spec_final.md  spellcasters-backend-spec_v1.md  spellcasters-backend-spec_v3.md
game/: artifacts.py  engine.py  logger.py  minion.py  rules.py  wizard.py
simulator/: match.py  visualizer.py
tests/: __init__.py  conftest.py
tests/bots/: __init__.py
(+18 files in other folders)
